--- a/_data/books.yml
+++ b/_data/books.yml
@@ -9,25 +9,25 @@
     link: https://openlibrary.org/works/OL27739453W/Build
     date_finished: null
     rating: null
-    progress: 36
+    progress: 50
 
-#   - title: Building a Second Brain
-#     subtitle: A Proven Method to Organize Your Digital Life and Unlock Your Creative Potential
-#     author: Tiago Forte
-#     cover: https://covers.openlibrary.org/b/id/12372866-L.jpg
-#     link: https://openlibrary.org/works/OL26417584W/Building_a_Second_Brain
-#     date_finished: null
-#     rating: null
-#     progress: 16
+  - title: High Output Management
+    subtitle: null
+    author: Andrew S. Grove
+    cover: https://covers.openlibrary.org/b/id/12722803-L.jpg
+    link: https://openlibrary.org/works/OL2355834W
+    date_finished: null
+    rating: null
+    progress: 50
 
-#   - title: High Output Management
-#     subtitle: null
-#     author: Andrew S. Grove
-#     cover: https://covers.openlibrary.org/b/id/12722803-L.jpg
-#     link: https://openlibrary.org/works/OL2355834W
-#     date_finished: null
-#     rating: null
-#     progress: 40
+  - title: Building a Second Brain
+    subtitle: A Proven Method to Organize Your Digital Life and Unlock Your Creative Potential
+    author: Tiago Forte
+    cover: https://covers.openlibrary.org/b/id/12372866-L.jpg
+    link: https://openlibrary.org/works/OL26417584W/Building_a_Second_Brain
+    date_finished: 2022-09-20
+    rating: 4
+    progress: 100
 
   - title: Slow Horses
     subtitle: null
