--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-eleventy-img": "^0.7.0",
     "markdown-it-footnote": "^3.0.3",
+    "prettier": "^2.7.1",
     "yaml": "^2.1.1"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
     "@types/markdown-it-attrs": "^4.1.0",
-    "bench": "^0.3.6",
-    "prettier": "^2.7.1"
+    "bench": "^0.3.6"
   },
   "packageManager": "yarn@3.2.3"
 }
