--- a/_data/games.yml
+++ b/_data/games.yml
@@ -1,6 +1,12 @@
 - list: Actively playing
   games:
   
+  - title: "Cyberpunk 2077"
+    platform: "PC"
+    id: 1877
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co4hk8.png"
+    link: "https://www.igdb.com/games/cyberpunk-2077"
+  
   - title: "Grandia"
     platform: "Nintendo Switch"
     id: 4127
