--- a/_data/books.yml
+++ b/_data/books.yml
@@ -19,6 +19,15 @@
     date_finished: null
     rating: null
     progress: 50
+   
+  - title: Like, Comment, Subscribe
+    subtitle: How YouTube Drives Google's Dominance and Controls Our Culture
+    author: Mark Bergen
+    cover: https://covers.openlibrary.org/b/id/12895071-L.jpg
+    link: https://openlibrary.org/works/OL26345815W/Like_Comment_Subscribe
+    date_finished: null
+    rating: null
+    progress: 5
 
   - title: Building a Second Brain
     subtitle: A Proven Method to Organize Your Digital Life and Unlock Your Creative Potential
