--- a/_data/books.yml
+++ b/_data/books.yml
@@ -10,15 +10,6 @@
     date_finished: null
     rating: null
     progress: 50
-
-  - title: High Output Management
-    subtitle: null
-    author: Andrew S. Grove
-    cover: https://covers.openlibrary.org/b/id/12722803-L.jpg
-    link: https://openlibrary.org/works/OL2355834W
-    date_finished: null
-    rating: null
-    progress: 50
    
   - title: Like, Comment, Subscribe
     subtitle: How YouTube Drives Google's Dominance and Controls Our Culture
@@ -28,6 +19,15 @@
     date_finished: null
     rating: null
     progress: 5
+
+  - title: High Output Management
+    subtitle: null
+    author: Andrew S. Grove
+    cover: https://covers.openlibrary.org/b/id/12722803-L.jpg
+    link: https://openlibrary.org/works/OL2355834W
+    date_finished: 2022-09-23
+    rating: 4
+    progress: 100
 
   - title: Building a Second Brain
     subtitle: A Proven Method to Organize Your Digital Life and Unlock Your Creative Potential
