--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,15 +1,6 @@
 - list: 2022
   goal: 12
   books:
-
-  - title: Build
-    subtitle: An Unorthodox Guide to Making Things Worth Making
-    author: Tony Fadell
-    cover: https://covers.openlibrary.org/b/id/12742378-L.jpg
-    link: https://openlibrary.org/works/OL27739453W/Build
-    date_finished: null
-    rating: null
-    progress: 50
    
   - title: Like, Comment, Subscribe
     subtitle: How YouTube Drives Google's Dominance and Controls Our Culture
@@ -20,12 +11,21 @@
     rating: null
     progress: 5
 
+  - title: Build
+    subtitle: An Unorthodox Guide to Making Things Worth Making
+    author: Tony Fadell
+    cover: https://covers.openlibrary.org/b/id/12742378-L.jpg
+    link: https://openlibrary.org/works/OL27739453W/Build
+    date_finished: 2022-10-29
+    rating: 5
+    progress: 100
+
   - title: High Output Management
     subtitle: null
     author: Andrew S. Grove
     cover: https://covers.openlibrary.org/b/id/12722803-L.jpg
     link: https://openlibrary.org/works/OL2355834W
-    date_finished: 2022-09-23
+    date_finished: 2022-10-23
     rating: 4
     progress: 100
 
