--- a/data/books.yml
+++ b/data/books.yml
@@ -1,34 +1,52 @@
 - list: 2022
   goal: 12
   books:
+   
+  - title: Like, Comment, Subscribe
+    subtitle: How YouTube Drives Google's Dominance and Controls Our Culture
+    author: Mark Bergen
+    cover: https://covers.openlibrary.org/b/id/12895071-L.jpg
+    link: https://openlibrary.org/works/OL26345815W/Like_Comment_Subscribe
+    date_finished: null
+    rating: null
+    progress: 5
 
   - title: Build
     subtitle: An Unorthodox Guide to Making Things Worth Making
     author: Tony Fadell
     cover: https://covers.openlibrary.org/b/id/12742378-L.jpg
     link: https://openlibrary.org/works/OL27739453W/Build
-    date_finished: null
-    rating: null
-    progress: 36
-  
-  - title: Building a Second Brain
-    subtitle: A Proven Method to Organize Your Digital Life and Unlock Your Creative Potential
-    author: Tiago Forte
-    cover: https://covers.openlibrary.org/b/id/12372866-L.jpg
-    link: https://openlibrary.org/works/OL26417584W/Building_a_Second_Brain
-    date_finished: null
-    rating: null
-    progress: 16
+    date_finished: 2022-10-29
+    rating: 5
+    progress: 100
 
   - title: High Output Management
     subtitle: null
     author: Andrew S. Grove
     cover: https://covers.openlibrary.org/b/id/12722803-L.jpg
     link: https://openlibrary.org/works/OL2355834W
-    date_finished: null
-    rating: null
-    progress: 40
-  
+    date_finished: 2022-10-23
+    rating: 4
+    progress: 100
+
+  - title: Building a Second Brain
+    subtitle: A Proven Method to Organize Your Digital Life and Unlock Your Creative Potential
+    author: Tiago Forte
+    cover: https://covers.openlibrary.org/b/id/12372866-L.jpg
+    link: https://openlibrary.org/works/OL26417584W/Building_a_Second_Brain
+    date_finished: 2022-09-20
+    rating: 4
+    progress: 100
+
+  - title: Slow Horses
+    subtitle: null
+    author: Mick Herron
+    cover: https://covers.openlibrary.org/b/id/12861756-L.jpg
+    link: https://openlibrary.org/works/OL18630860W
+    date_finished: 2022-09-18 
+    rating: 4
+    progress: 100
+
   - title: Ruined by Design
     subtitle: How Designers Destroyed the World, and What We Can Do to Fix It
     author: Mike Monteiro
@@ -41,7 +59,7 @@
 - list: 2021
   goal: 20
   books:
-    
+
   - title: Four Thousand Weeks
     subtitle: Time Management for Mortals
     author: Oliver Burkeman
@@ -50,7 +68,7 @@
     date_finished: 2021-11-06
     rating: 5
     progress: 100
-    
+
   - title: Crossing the Chasm, 3rd Edition
     subtitle: Marketing and Selling Disruptive Products to Mainstream Customers
     author: Geoffrey A. Moore
