--- a/data/games.yml
+++ b/data/games.yml
@@ -1,17 +1,11 @@
 - list: Actively playing
   games:
-
-  - title: "Grand Theft Auto V"
+  
+  - title: "Red Dead Redemption 2"
     platform: "PC"
-    id: 1020
-    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2lbd.png"
-    link: "https://www.igdb.com/games/grand-theft-auto-v"
-
-  - title: "Phoenix Wright: Ace Attorney - Spirit of Justice"
-    platform: "Nintendo 3DS"
-    id: 12077
-    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2h9w.jpg"
-    link: "https://www.igdb.com/games/phoenix-wright-ace-attorney-spirit-of-justice"
+    id: 25076
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co1q1f.png"
+    link: "https://www.igdb.com/games/red-dead-redemption-2"
 
 - list: Stalled but occasionally progress is made
   games:
@@ -34,11 +28,23 @@
     cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co30fd.jpg"
     link: "https://www.igdb.com/games/final-fantasy-xiv-online--1"
 
+  - title: "Grand Theft Auto V"
+    platform: "PC"
+    id: 1020
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2lbd.png"
+    link: "https://www.igdb.com/games/grand-theft-auto-v"
+
   - title: "Grandia"
     platform: "Nintendo Switch"
     id: 4127
     cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2w84.jpg"
     link: "https://www.igdb.com/games/grandia"
+
+  - title: "Katamari Damacy REROLL"
+    platform: "Nintendo Switch"
+    id: 109458
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co25sm.png"
+    link: "https://www.igdb.com/games/katamari-damacy-reroll"
 
   - title: "NieR Replicant ver.1.22474487139..."
     platform: "Playstation 5"
@@ -72,6 +78,34 @@
 
 - list: Completed
   games:
+  
+  - title: "Donut County"
+    platform: "PC"
+    id: 55080
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co1qv8.png"
+    link: "https://www.igdb.com/games/donut-county"
+    date_finished: 2022-11-03
+  
+  - title: "Alba: A Wildlife Adventure"
+    platform: "PC"
+    id: 135919
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co3uyi.png"
+    link: "https://www.igdb.com/games/alba-a-wildlife-adventure"
+    date_finished: 2022-11-03
+  
+  - title: "Cyberpunk 2077"
+    platform: "PC"
+    id: 1877
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co4hk8.png"
+    link: "https://www.igdb.com/games/cyberpunk-2077"
+    date_finished: 2022-11-02
+
+  - title: "Phoenix Wright: Ace Attorney - Spirit of Justice"
+    platform: "Nintendo 3DS"
+    id: 12077
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2h9w.jpg"
+    link: "https://www.igdb.com/games/phoenix-wright-ace-attorney-spirit-of-justice"
+    date_finished: 2022-08-14
 
   - title: "Call of Duty: Modern Warfare (2019)"
     platform: "PC"
