--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "build": "COMMIT_SHA=$(git rev-parse --short HEAD) NODE_ENV=production hugo --gc",
     "build:deps": "./ci/install.sh",
     "build:metadata": "./ci/genmetadata.sh",
+    "deploy": "./ci/deploy.sh",
     "lint": "eslint assets/js",
-    "test": "./ci/test.sh"
+    "test": "./ci/test.sh",
+    "prettify": "prettier -w public/**/*.html",
+    "syntax": "prettier -c public/**/*.html"
   },
   "devDependencies": {
     "@babel/core": "7.18.2",
