--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "npm run build:deps && pnpm run test && pnpm run build:metadata && pnpm run build"
+command = "npm run deploy"
 
 [build.environment]
 HUGO_VERSION = "0.105.0"
