Increase prettier depth

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "deploy": "./ci/deploy.sh",
     "lint": "eslint assets/js",
     "test": "./ci/test.sh",
-    "prettify": "prettier -w public/**/*.html",
-    "syntax": "prettier -c public/**/*.html"
+    "prettify": "prettier -w public/**/**/**/*.html",
+    "syntax": "prettier -c public/**/**/**/*.html"
   },
   "devDependencies": {
     "@babel/core": "7.18.2",
