--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Marcus Crane <marcus@utf9k.net>",
   "license": "MIT",
   "scripts": {
-    "start": "COMMIT_SHA=main hugo server --disableFastRender",
+    "start": "COMMIT_SHA=main hugo server --disableFastRender --bind 0.0.0.0",
     "build": "COMMIT_SHA=$(git rev-parse --short HEAD) NODE_ENV=production hugo --gc",
     "build:deps": "./ci/install.sh",
     "build:metadata": "./ci/genmetadata.sh",
