Split start into second command preset for rendering across network

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Marcus Crane <marcus@utf9k.net>",
   "license": "MIT",
   "scripts": {
-    "start": "COMMIT_SHA=main hugo server --disableFastRender --bind 0.0.0.0",
+    "start": "COMMIT_SHA=main hugo server --disableFastRender",
+    "start:wideband": "COMMIT_SHA=main hugo server --disableFastRender --bind 0.0.0.0 --baseURL http://$(ifconfig en1 | grep 'inet ' | awk '{ print $2 }')",
     "build": "COMMIT_SHA=$(git rev-parse --short HEAD) NODE_ENV=production hugo --gc",
     "build:deps": "./ci/install.sh",
     "build:metadata": "./ci/genmetadata.sh",
