--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           node-version: 18
       - run: npm install -g pnpm
-      - run: pnpm install
+      - run: npm run deploy
