--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
-  ]
+    "config:base",
+    ":assignee(marcus-crane)",
+    "group:allNonMajor"
+  ],
+  "prHourlyLimit": 10
 }
