--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "devDependencies": {
     "@babel/core": "7.20.5",
     "@babel/preset-env": "7.20.2",
-    "autoprefixer": "10.4.13",
     "eslint": "8.30.0",
-    "postcss": "8.4.20",
-    "postcss-cli": "8.3.1",
     "prettier": "^2.8.0"
   },
   "dependencies": {
-    "littlefoot": "3.4.1"
+    "autoprefixer": "^10.4.13",
+    "littlefoot": "3.4.1",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0"
   }
 }
