--- a/.github/workflows/audit-links.yml
+++ b/.github/workflows/audit-links.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11.0"
+      - name: Install dependencies
+        run: python -m pip install -r scripts/requirements.txt
       - name: Audit links
         run: python scripts/validate-urls.py
       - name: Commit index changes
