Add permission for writing deployments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     permissions:
+      deployments: write
       pull-requests: write
     steps:
       - name: Checkout
