--- a/config.yaml
+++ b/config.yaml
@@ -145,36 +145,37 @@ server:
   - for: /**
     values:
       Content-Security-Policy: >-
-        default-src 'self';
-        style-src 'self'
+        default-src 'self'
+        ; style-src 'self'
         'unsafe-inline'
         https://api.mapbox.com
-        img-src
+        ; img-src
         data:
         blob:
-        *;
-        media-src
+        *
+        ; media-src
         data:
-        *;
-        script-src 'self'
-        https://api.mapbox.com;
-        connect-src 'self'
+        *
+        ; script-src 'self'
+        https://api.mapbox.com
+        ; connect-src 'self'
         https://api.mapbox.com
         https://api.ipinfodb.com
         https://events.mapbox.com
         https://*.tiles.mapbox.com
-        https://gunslinger.utf9k.net;
-        worker-src 'self'
-        blob: ;
-        script-src-elem 'self'
+        https://gunslinger.utf9k.net
+        ; worker-src 'self'
+        blob:
+        ; script-src-elem 'self'
         'sha256-+XV7Bs0QypN9E6irhyz17UuREld+WSb4nmZgVxi6kD0='
         https://api.mapbox.com
-        https://platform.twitter.com;
-        frame-src 'self'
+        https://platform.twitter.com
+        ; frame-src 'self'
         https://www.youtube.com
         https://platform.twitter.com;
-        child-src 'self'
-        blob:;
+        ; child-src 'self'
+        blob:
+        ;
       Strict-Transport-Security: max-age=31536000; includeSubDomains
       X-Frame-Options: SAMEORIGIN
       X-XSS-Protection: 1; mode=block
