--- a/.github/workflows/manga-sync.yml
+++ b/.github/workflows/manga-sync.yml
@@ -42,3 +42,6 @@ jobs:
         with:
           github_token: ${{ secrets.PAT_TOKEN }}
           branch: ${{ github.ref }}
+
+      - name: Redeploy site
+        uses: marcus-crane/utf9k/.github/workflows/deploy.yml@main
